k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
spec:
  ingressClassName: nginx  
  rules:
    - host: monos.local
      http:
        paths:
          - path: /AuthService
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: buscarpersonas
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
